Fixed z-index on background

--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 body{
     height: 100%;
-    background-image: url(assets/tram_bg.jpg);
     background-color: rgb(56, 56, 56);
     background-size: cover;
     font-family: "Poppins Regular";
@@ -29,7 +28,13 @@ ul{
     list-style-type: none;
 }
 
-#bg-overlay{
+.bg-image{
+    position: fixed;
+    margin: 0;
+    z-index: -2;
+    width: 100%;
+}
+.bg-overlay{
     position: fixed;
     margin: 0;
     z-index: -1;
